--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <tr>
             <td><code>/</code></td>
             <td>間隔</td>
-            <td><code>0/15</code> → 15分ごと</td>
+            <td><code>0/15</code> → 0分起点で15分間隔</td>
           </tr>
           <tr>
             <td><code>L</code></td>
@@ -342,7 +342,7 @@
     </div>
     
     <div class="footer">
-      <p>Powered by <a href="#">QuartzCronJP</a> v<span id="version"></span></p>
+      <p>Powered by <a href="https://github.com/ryoheiTkd/quartz-cron-jp#">QuartzCronJP</a> v<span id="version"></span></p>
     </div>
   </div>
   
@@ -354,14 +354,16 @@
     var EXAMPLES = [
       { cron: '0 0 12 * * ?', desc: '毎日正午' },
       { cron: '0 30 9 ? * MON-FRI', desc: '平日9:30' },
-      { cron: '0 0/15 * * * ?', desc: '15分ごと' },
-      { cron: '0 10/20 * * * ?', desc: '10分から20分間隔' },
+      { cron: '0 0/15 * * * ?', desc: '毎時0分起点で15分間隔' },
+      { cron: '0 5/20 * * * ?', desc: '毎時5分起点で20分間隔' },
+      { cron: '0 0 0/2 * * ?', desc: '0:00起点で2時間間隔' },
+      { cron: '0 30 0/2 * * ?', desc: '0:30起点で2時間間隔' },
+      { cron: '0 0 9-17 ? * MON-FRI', desc: '平日9〜17時、毎時00分' },
       { cron: '0 30 8,12,18 * * ?', desc: '8・12・18時30分' },
-      { cron: '0 0 10 ? * 2#1', desc: '毎月第1月曜10時' },
+      { cron: '0 0 10 ? * MON#1', desc: '毎月第1月曜10時' },
       { cron: '0 0 18 L * ?', desc: '毎月末18時' },
       { cron: '0 30 9 ? * 1L', desc: '毎月最終日曜9:30' },
-      { cron: '0 0 0 1 1 ? 2025', desc: '2025年元日0時' },
-      { cron: '0/1 0 2 * * ?', desc: '毎日2時0分に毎秒' }
+      { cron: '0 0 0 1 1 ? 2025', desc: '2025年元日0時' }
     ];
     
     var FIELD_LABELS = {
