--- a/index.html
+++ b/index.html
@@ -352,18 +352,18 @@
   <script>
     // サンプルデータ
     var EXAMPLES = [
-      { cron: '0 0 12 * * ?', desc: '毎日正午' },
-      { cron: '0 30 9 ? * MON-FRI', desc: '平日9:30' },
+      { cron: '0 0 12 * * ?', desc: '毎日午後12時（正午）' },
+      { cron: '0 30 9 ? * MON-FRI', desc: '平日午前9時30分' },
       { cron: '0 0/15 * * * ?', desc: '毎時0分起点で15分間隔' },
       { cron: '0 5/20 * * * ?', desc: '毎時5分起点で20分間隔' },
-      { cron: '0 0 0/2 * * ?', desc: '0:00起点で2時間間隔' },
-      { cron: '0 30 0/2 * * ?', desc: '0:30起点で2時間間隔' },
-      { cron: '0 0 9-17 ? * MON-FRI', desc: '平日9〜17時、毎時00分' },
-      { cron: '0 30 8,12,18 * * ?', desc: '8・12・18時30分' },
-      { cron: '0 0 10 ? * MON#1', desc: '毎月第1月曜10時' },
-      { cron: '0 0 18 L * ?', desc: '毎月末18時' },
-      { cron: '0 30 9 ? * 1L', desc: '毎月最終日曜9:30' },
-      { cron: '0 0 0 1 1 ? 2025', desc: '2025年元日0時' }
+      { cron: '0 0 0/2 * * ?', desc: '午前0時起点で2時間間隔' },
+      { cron: '0 30 0/2 * * ?', desc: '午前0時30分起点で2時間間隔' },
+      { cron: '0 0 9-17 ? * MON-FRI', desc: '平日午前9〜午後5時、毎時00分' },
+      { cron: '0 30 8,12,18 * * ?', desc: '午前8・午後12・午後6時30分' },
+      { cron: '0 0 10 ? * MON#1', desc: '毎月第1月曜午前10時' },
+      { cron: '0 0 18 L * ?', desc: '毎月末午後6時' },
+      { cron: '0 30 9 ? * 1L', desc: '毎月最終日曜午前9時30分' },
+      { cron: '0 0 0 1 1 ? 2025', desc: '2025年元日午前0時' }
     ];
     
     var FIELD_LABELS = {
