add: READMEとサンプル調整

--- a/index.html
+++ b/index.html
@@ -358,12 +358,13 @@
       { cron: '0 5/20 * * * ?', desc: '毎時5分起点で20分間隔' },
       { cron: '0 0 0/2 * * ?', desc: '午前0時起点で2時間間隔' },
       { cron: '0 30 0/2 * * ?', desc: '午前0時30分起点で2時間間隔' },
-      { cron: '0 0 9-17 ? * MON-FRI', desc: '平日午前9〜午後5時、毎時00分' },
+      { cron: '0 0 9-17 ? * MON-FRI', desc: '平日午前9時〜午後5時' },
       { cron: '0 30 8,12,18 * * ?', desc: '午前8・午後12・午後6時30分' },
-      { cron: '0 0 10 ? * MON#1', desc: '毎月第1月曜午前10時' },
-      { cron: '0 0 18 L * ?', desc: '毎月末午後6時' },
-      { cron: '0 30 9 ? * 1L', desc: '毎月最終日曜午前9時30分' },
-      { cron: '0 0 0 1 1 ? 2025', desc: '2025年元日午前0時' }
+      { cron: '0 0 10 ? * MON#1', desc: '毎月第1月曜日午前10時' },
+      { cron: '0 0 18 L * ?', desc: '毎月末日午後6時' },
+      { cron: '0 30 9 ? * 1L', desc: '毎月最終日曜日午前9時30分' },
+      { cron: '0 0 0 1 1 ? 2025', desc: '2025年1月1日午前0時' },
+      { cron: '0 0 22-5 ? * FRI-MON', desc: '金〜月曜日の夜間（跨ぎ範囲）' }
     ];
     
     var FIELD_LABELS = {
